<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.auth.OnBoardingFragment">

    <TextView
        android:id="@+id/on_boarding_tv_app_name"
        style="@style/OnBoardingAppNameTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/on_boarding_heading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/onb_boarding_iv_illustration"
        android:layout_width="280dp"
        android:layout_height="280dp"
        android:contentDescription="@string/on_boarding_illustration_content_description"
        android:src="@drawable/illustration_on_boarding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/on_boarding_tv_app_name" />

    <TextView
        android:id="@+id/on_boarding_tv_headline"
        style="@style/OnBoardingHeadlineTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/on_boarding_sub_heading"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/onb_boarding_iv_illustration" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/on_boarding_btn_login"
        style="@style/ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="68dp"
        android:backgroundTint="@color/my_orange"
        android:text="@string/button_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/on_boarding_tv_headline" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/on_boarding_btn_register"
        style="@style/OutlinedButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:padding="12dp"
        android:text="@string/button_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/on_boarding_btn_login" />

</androidx.constraintlayout.widget.ConstraintLayout>