<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item_story_card_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:layout_marginBottom="12dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground"
    app:cardBackgroundColor="@color/my_grey_200"
    app:cardCornerRadius="8dp"
    app:cardElevation="2dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="12dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/item_story_iv_post"
            android:layout_width="0dp"
            android:layout_height="230dp"
            android:background="@color/my_purple_500"
            android:contentDescription="@string/icon_logo_content_description_example"
            android:scaleType="centerCrop"
            android:transitionName="@string/transition_name_of_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearance="@style/RoundedImageShape" />

        <TextView
            android:id="@+id/item_story_tv_full_name"
            style="@style/HomeCardFullNameTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/card_story_user_full_name_example"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/item_story_iv_post" />

        <View
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_marginStart="12dp"
            android:background="@drawable/bg_rounded_secondary"
            app:layout_constraintBottom_toBottomOf="@id/item_story_tv_full_name"
            app:layout_constraintStart_toEndOf="@id/item_story_tv_full_name"
            app:layout_constraintTop_toTopOf="@id/item_story_tv_full_name" />

        <TextView
            android:id="@+id/item_story_tv_date"
            style="@style/HomeCardDateTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_story_date_example"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/item_story_tv_full_name" />

        <TextView
            android:id="@+id/item_story_tv_description"
            style="@style/HomeCardDescriptionTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/card_story_description_example"
            android:textAlignment="textStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/item_story_tv_date" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>