<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_main"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="id.rllyhz.dailyus.presentation.ui.home.HomeFragment"
        android:label="@string/title_home">
        <action
            android:id="@+id/action_homeFragment_to_detailFragment"
            app:destination="@id/detailFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/postFragment"
        android:name="id.rllyhz.dailyus.presentation.ui.post.PostFragment"
        android:label="@string/title_post" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="id.rllyhz.dailyus.presentation.ui.profile.ProfileFragment"
        android:label="@string/title_profile">
        <action
            android:id="@+id/action_profileFragment_to_authActivity"
            app:destination="@id/authActivity"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/profileFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <activity
        android:id="@+id/authActivity"
        android:name="id.rllyhz.dailyus.presentation.ui.auth.AuthActivity"
        android:label="activity_auth"
        tools:layout="@layout/activity_auth" />
    <fragment
        android:id="@+id/detailFragment"
        android:name="id.rllyhz.dailyus.presentation.ui.home.DetailFragment"
        android:label="fragment_detail"
        tools:layout="@layout/fragment_detail">
        <argument
            android:name="story"
            app:argType="id.rllyhz.dailyus.data.source.local.model.StoryEntity" />
    </fragment>
</navigation>