<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.auth.RegisterFragment">

    <include
        android:id="@+id/layout_top_bar"
        layout="@layout/layout_custom_top_bar" />

    <EditText
        android:id="@+id/register_et_name"
        style="@style/EditTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/bg_edit_text"
        android:ellipsize="end"
        android:hint="@string/name_hint"
        android:inputType="text"
        android:maxLines="1"
        android:padding="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_top_bar" />

    <id.rllyhz.dailyus.view.EmailEditText
        android:id="@+id/register_et_email"
        style="@style/EditTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_edit_text"
        android:hint="@string/email_hint"
        android:padding="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_et_name" />

    <id.rllyhz.dailyus.view.PasswordEditText
        android:id="@+id/register_et_password"
        style="@style/EditTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_edit_text"
        android:hint="@string/password_hint"
        android:padding="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_et_email" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/register_btn_submit"
        style="@style/ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:alpha="0"
        android:text="@string/button_register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:alpha="1" />

    <ProgressBar
        android:id="@+id/register_progressbar"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:alpha="0"
        android:theme="@style/ButtonProgressBarStyle"
        android:translationZ="12dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/register_btn_submit"
        app:layout_constraintEnd_toEndOf="@id/register_btn_submit"
        app:layout_constraintStart_toStartOf="@id/register_btn_submit"
        app:layout_constraintTop_toTopOf="@id/register_btn_submit" />

</androidx.constraintlayout.widget.ConstraintLayout>